# kuretree

./: README.md  kuretree.cabal
demo/: Demo01.hs  Demo02.hs  Demo03.hs
demo/data/: tree0.json  tree1.json
src/: BinaryTree.hs  KureTree.hs  RoseTree.hs
